--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -265,20 +265,45 @@
   max-height: 15vh;
   max-width: 25vw;
 }
+.button-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 .undo-btn {
   display: flex;
   flex-direction: row;
   border-radius: 15px;
   justify-content: space-between;
 }
+.undo-btn:hover {
+  background-color: red;
+  box-shadow: 4px 4px #003366;
+  .btn-text {
+    color: white;
+  }
+}
+.returner {
+  max-height: 5vh;
+}
+.save-btn {
+  border-radius: 15px;
+  width: 5vw;
+}
+.btn-text {
+  font-size: 1rem;
+}
+.save-btn:hover {
+  background-color: #0D9813;
+  box-shadow: 4px 4px #003366;
+  .btn-text {
+    color: white;
+  }
+}
 .alert-message {
   margin: 15px;
   font-weight: bold;
   font-size: 1.5rem;
-}
-.undo-btn:hover {
-  background-color: white;
-  box-shadow: 4px 4px #003366;
 }
 .undo-txt {
   font-size: 15px;
