Dynamic image slider for HostListings

--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -264,6 +264,12 @@
   border-radius: 15px;
   max-height: 15vh;
   max-width: 25vw;
+  height: auto;
+  transition: opacity 1s ease-in-out;
+  opacity: 0;
+}
+.visible {
+  opacity: 1;
 }
 .button-box {
   display: flex;
