--- a/web/src/components/base/SkeletonLoader.css
+++ b/web/src/components/base/SkeletonLoader.css
@@ -1,21 +1,20 @@
 .skeleton-card {
-  width: 21.7rem; 
-  margin: 1%; 
-  background-color: #eee; 
-  border-radius: 15px; 
+  width: 23%;
+  margin: 1%;
+  margin-top: 10px;
+  background-color: #fff;
   overflow: hidden;
-  display: inline-block; 
+  display: inline-block;
   vertical-align: top;
+  transition: all 0.5s ease-in-out;
   position: relative;
-  transition: all 0.5s ease-in-out; 
-  height: auto; 
 }
 
 .skeleton-image {
   width: 100%;
-  height: 235px; 
+  aspect-ratio: 1;
   background-color: #ddd; 
-  border-radius: 15px 15px 0 0; 
+  border-radius: 1.5rem; 
 }
 
 .skeleton-content {
@@ -26,7 +25,7 @@
   width: 90%; 
   height: 20px; 
   background-color: #ccc;
-  margin: 10px auto; 
+  margin: 10px; 
   border-radius: 4px; 
 }
 
@@ -34,14 +33,14 @@
   width: 80%; 
   height: 20px; 
   background-color: #ccc;
-  margin: 10px auto; 
+  margin: 10px; 
   border-radius: 4px; 
 }
 
 .skeleton-specs {
   display: flex;
-  justify-content: space-around; 
-  padding: 0 15px;
+  justify-content: space-around;
+  width: 90%; 
 }
 
 .skeleton-size {
