--- a/web/src/components/hostdashboard/Accommodations.css
+++ b/web/src/components/hostdashboard/Accommodations.css
@@ -2,6 +2,10 @@
   padding-top: 30px;
 }
 
+.full-visibility {
+  width: 100%;
+}
+
 .accocard {
   width: 23%;
   margin: 1%;
@@ -26,16 +30,6 @@
   border-radius: 15px;
   display: block;
 
-}
-
-.accocard-link {
-  text-decoration: none;
-  color: black;
-}
-
-.accocard-link:hover {
-  text-decoration: none;
-  color: black;
 }
 
 .accocard-content {
@@ -74,9 +68,9 @@
   margin-bottom: 8px;
   width: 300px;
   display: -webkit-box;
-  -webkit-line-clamp: 2; /* Aantal regels dat je wilt tonen */
-  -webkit-box-orient: vertical;  
-  /* white-space: nowrap; */
+  -webkit-line-clamp: 2; /* Aantal regels dat je wilt tonen /
+  -webkit-box-orient: vertical;
+  / white-space: nowrap; */
   overflow: hidden;
   text-overflow: ellipsis;
   height: 3em;
@@ -106,12 +100,6 @@
   }
 }
 
-/* @media (max-width: 768px) {
-  .accocard-detail {
-    width: 300px;
-  }
-} */
-
 @media (max-width: 480px) {
   .accocard-detail {
     width: 180px;
@@ -119,16 +107,4 @@
   .accocard-size {
     font-size: 12px;
   }
-}
-
-.no-results {
-  text-align: center; /* Centreert de tekst */
-  color: #D8000C; /* Rode kleur voor de tekst */
-  font-size: 1.5rem; /* Grotere tekstgrootte */
-  margin: 20px; /* Voegt wat ruimte rondom de tekst toe */
-  padding: 10px; /* Voegt padding binnen de tekstcontainer toe */
-  background-color: #FFBABA; /* Lichtrode achtergrondkleur */
-  border: 1px solid #D8000C; /* Rode rand rondom de tekst */
-  border-radius: 5px; /* Maakt de hoeken van de rand rond */
-  /*  */
 }
