--- a/web/src/components/base/SkeletonLoader.css
+++ b/web/src/components/base/SkeletonLoader.css
@@ -2,7 +2,7 @@
   width: 21.7rem; 
   margin: 1%; 
   background-color: #eee; 
-  border-radius: 15px; 
+  border-radius: 0.9375rem; 
   overflow: hidden;
   display: inline-block; 
   vertical-align: top;
@@ -13,45 +13,43 @@
 
 .skeleton-image {
   width: 100%;
-  height: 235px; 
+  height: 14.6875rem;
   background-color: #ddd; 
-  border-radius: 15px 15px 0 0; 
+  border-radius: 0.9375rem 0.9375rem 0 0; 
 }
 
 .skeleton-content {
-  padding: 15px 0; 
+  padding: 0.9375rem 0; 
 }
 
 .skeleton-title {
   width: 90%; 
-  height: 20px; 
+  height: 1.25rem; 
   background-color: #ccc;
-  margin: 10px auto; 
-  border-radius: 4px; 
+  margin: 0.625rem auto; 
+  border-radius: 0.25rem; 
 }
 
 .skeleton-detail {
   width: 80%; 
-  height: 20px; 
+  height: 1.25rem;
   background-color: #ccc;
-  margin: 10px auto; 
-  border-radius: 4px; 
+  margin: 0.625rem auto; 
+  border-radius: 0.25rem; 
 }
 
 .skeleton-specs {
   display: flex;
   justify-content: space-around; 
-  padding: 0 15px;
+  padding: 0 0.9375rem; 
 }
 
 .skeleton-size {
   width: 28%; 
-  height: 20px; 
+  height: 1.25rem; 
   background-color: #ccc;
-  border-radius: 4px; 
+  border-radius: 0.25rem; 
 }
-
-
 
 @media (max-width: 1292px) {
   .skeleton-card {
