Acommodations homepage aangepast en een beetje onboardingHost

--- a/web/src/components/landingpage/onboardingHost.css
+++ b/web/src/components/landingpage/onboardingHost.css
@@ -175,6 +175,9 @@
 .flex-row {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: auto;
 }
 
 .image-container {
