--- a/web/src/components/base/SkeletonLoader.css
+++ b/web/src/components/base/SkeletonLoader.css
@@ -1,55 +1,56 @@
 .skeleton-card {
-  width: 21.7rem; 
-  margin: 1%; 
-  background-color: #eee; 
-  border-radius: 0.9375rem; 
+  width: 23%;
+  margin: 1%;
+  margin-top: 10px;
+  background-color: #fff;
   overflow: hidden;
-  display: inline-block; 
+  display: inline-block;
   vertical-align: top;
+  transition: all 0.5s ease-in-out;
   position: relative;
-  transition: all 0.5s ease-in-out; 
-  height: auto; 
 }
 
 .skeleton-image {
   width: 100%;
-  height: 14.6875rem;
+  aspect-ratio: 1;
   background-color: #ddd; 
-  border-radius: 0.9375rem 0.9375rem 0 0; 
+  border-radius: 1.5rem; 
 }
 
 .skeleton-content {
-  padding: 0.9375rem 0; 
+  padding: 15px 0; 
 }
 
 .skeleton-title {
   width: 90%; 
-  height: 1.25rem; 
+  height: 20px; 
   background-color: #ccc;
-  margin: 0.625rem auto; 
-  border-radius: 0.25rem; 
+  margin: 10px; 
+  border-radius: 4px; 
 }
 
 .skeleton-detail {
   width: 80%; 
-  height: 1.25rem;
+  height: 20px; 
   background-color: #ccc;
-  margin: 0.625rem auto; 
-  border-radius: 0.25rem; 
+  margin: 10px; 
+  border-radius: 4px; 
 }
 
 .skeleton-specs {
   display: flex;
-  justify-content: space-around; 
-  padding: 0 0.9375rem; 
+  justify-content: space-around;
+  width: 90%; 
 }
 
 .skeleton-size {
   width: 28%; 
-  height: 1.25rem; 
+  height: 20px; 
   background-color: #ccc;
-  border-radius: 0.25rem; 
+  border-radius: 4px; 
 }
+
+
 
 @media (max-width: 1292px) {
   .skeleton-card {
