--- a/web/src/components/about/howitworks.css
+++ b/web/src/components/about/howitworks.css
@@ -1,4 +1,4 @@
-.hiwContainer {
+.hiwContainerTraveller, .hiwContainerHost {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -13,10 +13,14 @@
   margin: 0 50px;
 }
 
-.hiwCardImg {
+.hiwCardImg, .hiwCardImgHost {
   background-color: var(--primary-color);
   width: 100%;
   height: 150px;
+}
+
+.hiwCardImgHost {
+  background-color: var(--secondary-color);
 }
 
 .hiwCardHeading {
@@ -29,7 +33,7 @@
   margin-bottom: 20px;
 }
 
-.hiwBtn {
+.hiwBtn, .hiwBtnHost {
   color: white;
   background-color: var(--primary-color);
   text-decoration: none;
@@ -40,6 +44,10 @@
   border-radius: 10px;
   font-family: 'Kanit', sans-serif;
   font-weight: 500;
+}
+
+.hiwBtnHost {
+  background-color: var(--secondary-color);
 }
 
 @media (max-width: 1000px) {
