--- a/web/src/components/about/about.css
+++ b/web/src/components/about/about.css
@@ -5,6 +5,10 @@
     color: #000;
     font-size: 20px;
     font-style: normal;
+}
+
+.aboutus h3 {
+    font-family: 'Kanit', sans-serif;
     font-weight: 400;
 }
 
@@ -77,13 +81,23 @@
     margin-bottom: 20px;
 }
 
+.member > p:nth-of-type(1) {
+    color: var(--primary-color);
+}
+
 .avatar {
     height: 100px;
     width: 100px;
-    background-color: #ccc;
+    background-color: white;
     border-radius: 50%;
     margin: auto;
     margin-bottom: 10px;
+}
+
+.avatar img {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
 }
 
 .about {
