--- a/web/src/components/listingdetails/listing.css
+++ b/web/src/components/listingdetails/listing.css
@@ -109,3 +109,24 @@
   cursor: pointer;
   font-size: 16px;
 }
+
+.listing-details-image-window {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.image-column {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  width: 100%;
+  height: 100%;
+}
+
+.listing-image {
+  object-fit: cover;
+  max-width: 100%;
+  height: 100%;
+}
