--- a/web/src/components/utils/PageSwitcher.css
+++ b/web/src/components/utils/PageSwitcher.css
@@ -30,7 +30,7 @@
     display: inline-block;
     padding: 0.35em 1.2em;
     border: none;
-    margin: 0 0.3em 0.3em 0;
+    margin-right: 0;
     border-radius: 2em;
     box-sizing: border-box;
     transition: all 0.2s;
@@ -39,4 +39,108 @@
 }
 .listing-delete:hover {
     background-color: darkred;
+}
+
+@media (max-width: 480px) {
+    .App {
+        padding: 0;
+        margin: 0;
+    }
+    h2 {
+        margin: 0;
+    }
+    .wijzer {
+        display: flex;
+        flex-direction: column;
+    }
+    div.box {
+        margin: 0;
+        padding: 0;
+    }
+    .boxColumns {
+        margin: 0;
+    }
+    .fullBox {
+        box-shadow: none;
+    }
+    .page-body {
+        display: flex;
+        flex-direction: column;
+    }
+    .dashboard {
+        width: auto;
+    }
+    .dashboardSection.section-1 {
+        margin: 0;
+        padding: 0;
+        grid-template-columns: 0.5fr 0.5fr;
+    }
+    .contentContainer {
+        margin: 0;
+        padding: 0;
+        text-align: left;
+    }
+    .accommodation-tab {
+        margin: 0;
+        padding: 0;
+        flex-direction: column;
+        border-radius: 0.5em;
+        justify-content: space-around;
+        gap: 0.1em;
+        margin-bottom: 1em;
+        max-width: none;
+        p {
+            font-size: 0.8em;
+        }
+        .accommodation-left {
+            padding: 0;
+        }
+        .accommodation-right {
+            padding: 1em;
+        }
+        .accommodation-title {
+            display: inline-block;
+            color: white;
+            margin: 0;
+            position: absolute;
+            font-size: 0.75em;
+            align-self: center;
+        }
+        .accommodation-location {
+            color: white;
+            align-self: center;
+            position: absolute;
+            font-size: 0.6em;
+            margin-top: 5%;
+        }
+        .accommodation-img {
+            border-radius: 0.5em 0.5em 0 0;
+            padding: 0;
+            align-self: center;
+            width: 100%;
+            max-width: none;
+            max-height: none;
+            height: auto;
+        }
+        .listing-delete {
+            margin: 1em;
+        }
+    }
+    .pagination {
+        padding: 0;
+    }
+    .listing {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
+    .refresh-btn {
+        margin: 1em;
+        place-self: center;
+    }
+
 }
