--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -367,3 +367,11 @@
   }
 
 }
+@media (max-width: 480px) {
+  .locationBox {
+    option {
+      font-size: 0.5em;
+      padding: 0;
+    }
+  }
+}
