--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -163,7 +163,6 @@
 }
 
 .locationBox {
-  width: auto;
   height: auto;
   display: flex;
   flex-direction: row;
@@ -172,6 +171,10 @@
   justify-content: space-between;
   overflow: hidden;
   font-size: 1.1em;
+  width: 100%;
+  max-width: 100%;
+  padding: 0.75em;
+  margin: 1em auto;
 }
 
 .boxText {
@@ -368,10 +371,31 @@
 
 }
 @media (max-width: 480px) {
+  .selector {
+    width: auto;
+  }
   .locationBox {
     option {
       font-size: 0.5em;
       padding: 0;
+      border: none;
+      border-radius: 0;
+      margin:0;
+      display:block;
+      width: 10%;
+      cursor: pointer;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
+  }
+  select.locationBox {
+    width: auto;
+    padding: 0.75em;
+    margin: 1em;
+  }
+  div.alert-message {
+    margin-top: 2em;
+    margin-bottom: 2em;
   }
 }
