--- a/web/src/components/base/Register.css
+++ b/web/src/components/base/Register.css
@@ -75,3 +75,24 @@ label {
     word-wrap: break-word;
     align-self: flex-start;
 }
+.inputError {
+    animation: shake 0.3s linear;
+    border-color: red;
+}
+
+.inputShake {
+    animation: shake 0.5s;
+}
+
+@keyframes shake {
+    0% { margin-left: 0px; }
+    25% { margin-left: 5px; }
+    75% { margin-left: -5px; }
+    100% { margin-left: 0px; }
+}
+
+.errorText {
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    margin-top: 5px;
+}
