--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -102,7 +102,7 @@
     align-items: center;
     width: 100%;
     max-width: 200px;
-
+  text-align: end;
 }
 
 .wijzer-grn,.boxText {
@@ -382,6 +382,9 @@
       width: 100%;
       height: 10em;
     }
+  }
+  .wijzer-grn {
+    text-align: center;
   }
   .selector {
     width: auto;
